exported_metadata/main/default/objects/Approval_Log__c/Approval_Log__c.object-meta.xml
<CustomObject>
    <label>Approval Log</label>
    <nameField>
        <label>Approval_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>