exported_metadata/main/default/objects/Approval_Log__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>