exported_metadata/main/default/objects/Approval_Log__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>