exported_metadata/main/default/objects/Approval_Log__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>